# shurl_django

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  manage.py  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: django.yaml
app/: admin.py  forms.py  models.py  serializer.py  tests.py  urls.py  utils.py  views.py
app/static/css/: main.css
app/templates/app/: base.html  docs.html  index.html
app/templates/app/includes/: footer.html  header.html
config/: asgi.py  settings.py  wsgi.py
shurl_django/: settings.py  urls.py  wsgi.py
