[project]
name = "shurl_django"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ "name" = "GuilhermeCAz" }]
dependencies = ["django", "django-environ", "psycopg2-binary", "pyyaml", "django-bootstrap-v5"]

[project.optional-dependencies]
dev = ["django-stubs", "djlint", "mypy", "pip-tools", "ruff"]

[tool.djlint]
profile = "django"
max_line_length = 80

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    # "D",    # pydocstyle
    "DJ",     # flake8-django (DJ)
    "E",      # pycodestyle error
    "EM",     # flake8-errmsg
    "F",      # flake8
    "FBT001", # boolean-type-hint-positional-argument
    "FURB",   # refurb
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "RET",    # flake8-return
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
]

extend-ignore = [
    "ANN101", # missing-type-self: deprecated
    "D212",   # multi-line-summary-first-line: clashes with D213
]

[tool.setuptools]
py-modules = []
