[project]
name = "shurl_django"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ "name" = "GuilhermeCAz" }]
dependencies = [
    "django",
    "django-bootstrap5",
    "django-environ",
    "drf-spectacular",
    "psycopg[binary]",
]

[project.optional-dependencies]
dev = ["django-stubs", "djlint", "mypy", "pip-tools", "ruff"]

[tool.djlint]
max_line_length = 80
profile = "django"

[tool.pip-tools]
strip-extras = true

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "ANN101", # missing-type-self: deprecated
    "D212",   # multi-line-summary-first-line: clashes with D213
    "Q000",   # quotes: single quotes are preferred
    "ARG",    # flake8-unused-arguments
    "D",      # pydocstyle: removed during early development
    "ERA",    # eradicate: removed during early development
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S101"]

[tool.setuptools]
py-modules = []
